SERVER-12972: DBClientReplicaSet should ignore value of inline field of MapReduce commands