jstests/core/mr2.js
@@ -55,7 +55,9 @@ assert.eq( 16 , x.b.avg , "A2" );
 assert.eq( 18 , x.c.avg , "A3" );
 res.drop();
 
-res = t.mapReduce( m , r , { finalize : f , out : { inline : 1 } } );
+// inline does needs to exist - so set it to false to make sure the code is just checking for
+// existence
+res = t.mapReduce( m , r , { finalize : f , out : { inline : 0 } } );
 printjson( res )
 x = reformat( res );
 assert.eq( 9 , x.a.avg , "B1" );
